[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Weapons/Melee Weapons/pickaxe.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Pickaxe.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "swingright"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Area2D/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25, 0.3, 0.35, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 4, 8 ), Vector2( 12, 8 ), Vector2( 8, 8 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "melee_swoosh" ],
"method": "spawn_sound_effect_player"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 5 )

[node name="Pickaxe" type="Node2D"]
position = Vector2( -1, -3 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/swingright = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 8, 8 )
rotation = 1.5708
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
vframes = 3
hframes = 3

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 9.53674e-07, -8 )
shape = SubResource( 2 )
disabled = true

[node name="SwooshPos" type="Node2D" parent="Sprite"]
position = Vector2( -4, -8.6863 )
rotation = 0.785398
scale = Vector2( 1, -1 )
z_index = -1

[node name="CoolDownTimer" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
